<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.tnsilver.contacts</groupId>
	<artifactId>redis-contacts</artifactId>
	<version>1.0.0-RELEASE</version>
	<name>springboot-rest-redis-contacts</name>
	<description>SpringBoot RESTful with MongoDB</description>
	<packaging>war</packaging>
	<url>https://github.com/tnsilver/springboot-samples/tree/master/springboot-rest-redis-contacts</url>

	<developers>
		<developer>
			<id>tnsilver</id>
			<email>tnsilver@gmail.com</email>
			<organization>T.N.Silverman</organization>
			<roles>
				<role>architect</role>
				<role>developer</role>
			</roles>
			<timezone>-2</timezone>
			<url>www.silvermania.com</url>
		</developer>
	</developers>

	<scm>
		<connection>scm:git:http://github.com/tnsilver/springboot-samples.git</connection>
		<developerConnection>scm:git:http://github.com/tnsilver/springboot-samples.git</developerConnection>
		<url>https://github.com/tnsilver/springboot-samples/tree/master/springboot-rest-redis-contacts</url>
	</scm>


	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.7.5</version>
	</parent>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<java.version>19</java.version>
		<maven.compiler.source>${java.version}</maven.compiler.source>
		<maven.compiler.target>${java.version}</maven.compiler.target>
		<maven.compiler.release>${java.version}</maven.compiler.release>
		<maven.compiler.version>3.10.1</maven.compiler.version>
		<guava.version>30.1.1-jre</guava.version>
		<org.apache.poi.version>5.0.0</org.apache.poi.version>
		<itextpdf.version>5.5.13.2</itextpdf.version>
		<commons.io.version>2.9.0</commons.io.version>
		<commons.beanutils.version>1.9.4</commons.beanutils.version>
		<hibernate.validator.version>7.0.1.Final</hibernate.validator.version>
		<javax.servlet.jsp-api.version>2.3.3</javax.servlet.jsp-api.version>
		<maven.test.failure.ignore>true</maven.test.failure.ignore>
		<maven.surefire.plugin.version>3.0.0-M6</maven.surefire.plugin.version>
		<maven.failsafe.plugin.version>3.0.0-M6</maven.failsafe.plugin.version>
		<maven.site.plugin.version>3.9.1</maven.site.plugin.version>
		<maven.maven.pmd.plugin.version>3.11.0</maven.maven.pmd.plugin.version>
		<maven.jar.plugin.version>3.2.0</maven.jar.plugin.version>
		<maven.clean.plugin.version>3.1.0</maven.clean.plugin.version>
		<jacoco.maven.plugin.version>0.8.8</jacoco.maven.plugin.version>
		<jacoco.haltOnFailure>false</jacoco.haltOnFailure>
		<spring.security.system.user.name>system</spring.security.system.user.name>
		<!-- REDIS -->
		<embeded.redis.version>0.7.3</embeded.redis.version>
		<spring.redis.host>localhost</spring.redis.host>
		<spring.redis.database>0</spring.redis.database>
		<spring.redis.port>6379</spring.redis.port>
		<spring.redis.password>password</spring.redis.password>
		<spring.redis.username>user</spring.redis.username>
		<spring.redis.url>redis://${spring.redis.host}:${spring.redis.port}</spring.redis.url>
		<!-- web server (tomcat version must stay 9.0.50) -->
		<server.port>8080</server.port>
		<tomcat.version>9.0.50</tomcat.version>
		<!-- spring boot maven plugin : build-image user properties-->
		<packaging.layers>false</packaging.layers>
		<spring-boot.build-image.imageName>${project.artifactId}</spring-boot.build-image.imageName>
		<!-- <spring-boot.build-image.builder>paketobuildpacks/builder:base</spring-boot.build-image.builder> -->
		<!-- <spring-boot.build-image.cleanCache>false</spring-boot.build-image.cleanCache> -->
		<!-- jib -->
		<jib.maven.plugin.version>3.1.2</jib.maven.plugin.version>
		<start-class>com.tnsilver.contacts.Application</start-class>
		<!-- TEST -->
		<application.it.test.timeout>2</application.it.test.timeout>
		<application.it.test.timeunit>MINUTES</application.it.test.timeunit>
	</properties>

	<dependencies>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-actuator</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-aop</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-taglibs</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-rest</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-hateoas</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-redis</artifactId>
		</dependency>

		<dependency>
			<groupId>redis.clients</groupId>
			<artifactId>jedis</artifactId>
			<type>jar</type>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-thymeleaf</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-tomcat</artifactId>
		</dependency>

        <dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-tomcat</artifactId>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.apache.tomcat.embed</groupId>
			<artifactId>tomcat-embed-jasper</artifactId>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>jstl</artifactId>
		</dependency>

		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>javax.servlet-api</artifactId>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>javax.servlet.jsp</groupId>
			<artifactId>javax.servlet.jsp-api</artifactId>
			<version>${javax.servlet.jsp-api.version}</version>
			<scope>provided</scope>
		</dependency>

		<!-- <dependency> <groupId>javax.servlet</groupId> <artifactId>javax.servlet-api</artifactId> <scope>provided</scope> </dependency> -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>com.itextpdf</groupId>
			<artifactId>itextpdf</artifactId>
			<version>${itextpdf.version}</version>
		</dependency>

		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi</artifactId>
			<version>${org.apache.poi.version}</version>
		</dependency>

		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
		</dependency>

		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>${commons.io.version}</version>
		</dependency>

		<dependency>
			<groupId>commons-beanutils</groupId>
			<artifactId>commons-beanutils</artifactId>
			<version>${commons.beanutils.version}</version>
		</dependency>

		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>${guava.version}</version>
		</dependency>

		<dependency>
			<groupId>javax.validation</groupId>
			<artifactId>validation-api</artifactId>
		</dependency>

		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
		</dependency>

		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
		</dependency>

		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpclient</artifactId>
		</dependency>

		<dependency>
			<groupId>it.ozimov</groupId>
			<artifactId>embedded-redis</artifactId>
			<version>${embeded.redis.version}</version>
		</dependency>

		<!-- TEST -->

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-test</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-params</artifactId>
			<scope>test</scope>
		</dependency>

	</dependencies>

	<build>

		<finalName>redis-contacts</finalName>

		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
				<excludes>
					<exclude>static/images/**/*.*</exclude>
					<exclude>redis.conf</exclude>
					<exclude>Dockerfile</exclude>
					<exclude>docker-compose.yml</exclude>
				</excludes>
			</resource>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>false</filtering>
				<excludes>
					<exclude>redis.conf</exclude>
					<exclude>Dockerfile</exclude>
					<exclude>docker-compose.yml</exclude>
				</excludes>
				<includes>
					<include>static/images/**/*.*</include>
				</includes>
			</resource>
			<resource>
				<directory>src/main/resources</directory>
				<targetPath>${project.basedir}</targetPath>
				<filtering>true</filtering>
				<includes>
					<include>redis.conf</include>
					<include>Dockerfile</include>
					<include>docker-compose.yml</include>
				</includes>
			</resource>
			<resource>
				<directory>src/test/resources</directory>
				<targetPath>${project.build.directory}/test-classes</targetPath>
				<filtering>true</filtering>
				<includes>
					<include>**/*.properties</include>
				</includes>
			</resource>
		</resources>

		<pluginManagement>
			<plugins>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>${maven.compiler.version}</version>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-clean-plugin</artifactId>
					<version>${maven.clean.plugin.version}</version>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
					<version>${maven.jar.plugin.version}</version>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-failsafe-plugin</artifactId>
					<version>${maven.failsafe.plugin.version}</version>
				</plugin>

				<plugin>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-maven-plugin</artifactId>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>${maven.surefire.plugin.version}</version>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-report-plugin</artifactId>
					<version>${maven.surefire.plugin.version}</version>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-pmd-plugin</artifactId>
					<version>${maven.pmd.plugin.version}</version>
				</plugin>

				<plugin>
					<groupId>org.jacoco</groupId>
					<artifactId>jacoco-maven-plugin</artifactId>
					<version>${jacoco.maven.plugin.version}</version>
				</plugin>

				<plugin>
					<groupId>com.google.cloud.tools</groupId>
					<artifactId>jib-maven-plugin</artifactId>
					<version>${jib.maven.plugin.version}</version>
				</plugin>

			</plugins>
		</pluginManagement>

		<plugins>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<release>${maven.compiler.release}</release>
					<debuglevel>lines,vars,source</debuglevel>
					<compilerArgument>-g</compilerArgument>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-clean-plugin</artifactId>
				<configuration>
					<filesets>
						<fileset>
							<directory>${project.basedir}</directory>
							<includes>
								<include>Dockerfile</include>
								<include>redis.conf</include>
								<include>docker-compose.yml</include>
							</includes>
						</fileset>
					</filesets>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<executions>
					<execution>
						<goals>
							<goal>integration-test</goal>
							<goal>verify</goal>
						</goals>
						<configuration>
							<failIfNoSpecifiedTests>false</failIfNoSpecifiedTests>
							<excludes>
								<exclude>**/Test</exclude>
								<exclude>**/Application*</exclude>
								<exclude>**/*Config</exclude>
								<exclude>**/Base*</exclude>
							</excludes>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<testFailureIgnore>true</testFailureIgnore>
					<excludes>
						<exclude>**/Application*</exclude>
						<exclude>**/*Config</exclude>
						<exclude>**/*IT</exclude>
						<exclude>**/Base*</exclude>
					</excludes>
					<!-- do not let this line break -->
					<argLine>@{argLine} --add-opens java.base/java.time=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED -Duser.timezone=UTC</argLine>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-report-plugin</artifactId>
				<configuration>
					<showSuccess>true</showSuccess>
				</configuration>
				<executions>
					<execution>
						<id>generate-reports</id>
						<phase>test</phase>
						<goals>
							<goal>report-only</goal>
						</goals>
					</execution>
					<execution>
						<id>generate-it-reports</id>
						<phase>integration-test</phase>
						<goals>
							<goal>failsafe-report-only</goal>
							<goal>report-only</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-site-plugin</artifactId>
				<version>${maven.site.plugin.version}</version>
				<executions>
					<execution>
						<id>generate-test-reports-styles</id>
						<phase>test</phase>
						<goals>
							<goal>site</goal>
						</goals>
						<configuration>
							<generateReports>false</generateReports>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<executions>
					<execution>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>coverage-report</id>
						<phase>test</phase>
						<goals>
							<goal>report</goal>
						</goals>
						<configuration>
							<excludes>
								<exclude>**/*Test.*</exclude>
								<exclude>**/*Config.*</exclude>
								<exclude>**/*IT.*</exclude>
								<exclude>**/Application*.*</exclude>
								<exclude>**/Base*</exclude>
							</excludes>
						</configuration>
					</execution>
					<execution>
						<id>it-coverage-report</id>
						<phase>integration-test</phase>
						<goals>
							<goal>report</goal>
						</goals>
						<configuration>
							<excludes>
								<exclude>**/*Test.*</exclude>
								<exclude>**/*Config.*</exclude>
								<exclude>**/*IT.*</exclude>
								<exclude>**/Application*.*</exclude>
								<exclude>**/Base*</exclude>
							</excludes>
						</configuration>
					</execution>
					<execution>
						<id>jacoco-check</id>
						<phase>test</phase>
						<goals>
							<goal>check</goal>
						</goals>
						<configuration>
							<excludes>
								<exclude>**/*Test.*</exclude>
								<exclude>**/*IT.*</exclude>
								<exclude>**/*Config.*</exclude>
								<exclude>**/Application*.*</exclude>
								<exclude>**/Base*</exclude>
							</excludes>
							<rules>
								<rule>
									<element>BUNDLE</element>
									<limits>
										<limit>
											<counter>INSTRUCTION</counter>
											<value>COVEREDRATIO</value>
											<minimum>0.60</minimum>
										</limit>
										<limit>
											<counter>CLASS</counter>
											<value>MISSEDCOUNT</value>
											<maximum>0</maximum>
										</limit>
									</limits>
								</rule>
							</rules>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<mainClass>${start-class}</mainClass>
					<layers>
						<enabled>${packaging.layers}</enabled>
					</layers>
				</configuration>
				<executions>
					<execution>
						<id>repackage</id>
						<goals>
							<goal>repackage</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>com.google.cloud.tools</groupId>
				<artifactId>jib-maven-plugin</artifactId>
				<configuration>
					<to>
						<!-- <image>registry.hub.docker.com/tnsilver/${project.artifactId}</image> -->
						<image>${project.artifactId}</image>
					</to>
					<container>
						<ports>
							<port>${server.port}</port>
						</ports>
						<!--
						<environment>
							<SPRING_PROFILES_ACTIVE>${spring.profiles.active}</SPRING_PROFILES_ACTIVE>
					   </environment>
					   -->
					</container>
				</configuration>
				<!--
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>dockerBuild</goal>
						</goals>
					</execution>
				</executions>
				 -->
			</plugin>
		</plugins>
	</build>

	<profiles>

		<profile>
			<!-- live redis on port 27017 -->
			<id>prod</id>
			<properties>
				<spring.profiles.active>prod</spring.profiles.active>
				<spring.redis.port>6379</spring.redis.port>
				<spring.redis.host>localhost</spring.redis.host>
				<spring.redis.url>redis://${spring.redis.host}:${spring.redis.port}</spring.redis.url>
				<application.it.test.timeout>2</application.it.test.timeout>
				<application.it.test.timeunit>MINUTES</application.it.test.timeunit>
			</properties>
		</profile>

		<profile>
			<!-- embedded redis -->
			<id>dev</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<properties>
				<spring.profiles.active>dev</spring.profiles.active>
				<spring.redis.port>6370</spring.redis.port>
				<spring.redis.host>localhost</spring.redis.host>
				<spring.redis.url>redis://${spring.redis.host}:${spring.redis.port}</spring.redis.url>
				<application.it.test.timeout>2</application.it.test.timeout>
				<application.it.test.timeunit>MINUTES</application.it.test.timeunit>
			</properties>
		</profile>

		<profile>
			<!-- embedded redis -->
			<id>test</id>
			<properties>
				<spring.profiles.active>test</spring.profiles.active>
				<spring.redis.port>6370</spring.redis.port>
				<spring.redis.url>redis://${spring.redis.host}:${spring.redis.port}</spring.redis.url>
				<application.it.test.timeout>2</application.it.test.timeout>
				<application.it.test.timeunit>MINUTES</application.it.test.timeunit>
			</properties>
		</profile>

	</profiles>
</project>
